# int-iScore

./: .gitignore  1_2.pbs  3070_0082_representative.npy  3070_0082_representative_hi.npy  3070_0082_representative_pbs.npy  3_mpi_sc_ec.pbs  5BVL_A.fasta  5HT2C_intiscore.csv  6A6I_ignorechain.fasta  6WHA_A.fasta  CURRENT_STATUS_SC_BSA.md  FASTSAS_ANALYSIS_PROMPT.md  README (1).md  README.md  WORK_LOG.md  affinity.npy  affinity_str.npy  all_3_6.csv  all_ref_with_dope.csv  black.py  calculate_af3.py  calculate_ec.py  calculate_ec_md.py  calculate_md.py  calculate_non_ref_af3.py  clean_pdb.py  combined_2_3.csv  debug_config.py  debug_import.py  env.yml  findcontactsV2-3.tcl  input_data_generate.py  intercaat.py  intercaat_config.ini  intercaat_functions.py  interface_residue_hpc.py  interface_residue_md.py  io.mc  md_3070_0082_hi_1_3.csv  md_3070_0082_hi_2_3.csv  (+25 more)
UNKNOWN.egg-info/: SOURCES.txt
frustratometer2-master/: RunFrustratometer.pl  run.py
frustratometer2-master/3070_0082-repeat_1_0107.pdb.done/: 3070_0082-repeat_1_0107.coord  3070_0082-repeat_1_0107.in  3070_0082-repeat_1_0107.pdb.vps  3070_0082-repeat_1_0107.pdb_configurational  3070_0082-repeat_1_0107.pdb_configurational_5adens  3070_0082-repeat_1_0107.pdb_configurational_auxiliar  Checkpoints  data.3070_0082-repeat_1_0107  dump.lammpstrj  log.lammps  tertiary_frustration.tcl
frustratometer2-master/3070_0082-repeat_1_0232.pdb.done/: 3070_0082-repeat_1_0232.coord  3070_0082-repeat_1_0232.in  3070_0082-repeat_1_0232.pdb.vps  3070_0082-repeat_1_0232.pdb_configurational  3070_0082-repeat_1_0232.pdb_configurational_5adens  3070_0082-repeat_1_0232.pdb_configurational_auxiliar  Checkpoints  data.3070_0082-repeat_1_0232  dump.lammpstrj  log.lammps  (+1 more)
input_generator/: README.md  __init__.py  generators.py  msa.py  trimming.py
int_iscore_temp/: 6A6I_sc_comparison.csv  af3_substitution_test_results.csv  analyze_6a6i_outliers.py  analyze_sc_score_terms.py  compare_5ht2c_ccp4_python.py  compare_surface_stats.py  draw_dx_schematic.py  git_stage_commit.sh  print_5ht2c_sc.py  run_af3_substitution_tests.py  run_ccp4_sc.sh  run_sample_substitution_tests.py  substitution_test_results.csv  test_all_6a6i_sc.py
output_test/: af3_test2_results.csv  md_test_results.csv  test_5HT2C_results.csv  test_md_results.csv  training_test_results.csv
src/: spe_clumap.npy
(+297 files in other folders)
