[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2", "pybind11>=2.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "int-iscore"
version = "1.0.0"
description = "Integrated AI Predictions Interface Analysis Scores Toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yulin Luo", email = "luoyl2022@shanghaitech.edu.cn"}
]
maintainers = [
    {name = "Yulin Luo", email = "luoyl2022@shanghaitech.edu.cn"}
]
keywords = [
    "protein",
    "complex",
    "interface",
    "analysis",
    "alphafold",
    "molecular-dynamics",
    "docking",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "biopython>=1.79",
    "freesasa>=2.1.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
all = [
    "mpi4py>=3.1.0",
    "modeller>=10.0",
]

[project.urls]
Homepage = "https://github.com/lluoto/int-iScore"
Documentation = "https://github.com/lluoto/int-iScore#readme"
Repository = "https://github.com/lluoto/int-iScore"
Issues = "https://github.com/lluoto/int-iScore/issues"

[project.scripts]
int-iscore = "int_iscore.cli:main"
int-iscore-frustration-legacy = "int_iscore.tools.frustration_legacy:main"
int-iscore-input-data-legacy = "int_iscore.tools.input_data_generate_legacy:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
int_iscore = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
